--- a/index.css
+++ b/index.css
@@ -1,3 +1,75 @@
-#heading {
-    color: red; 
+.header {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+}
+
+.app-logo {
+ width: 100px;
+}
+
+.nav-items{
+ padding: 0px 20px;
+}
+
+.nav-items > ul{
+    display: flex;
+    list-style-type: none;
+    font-size: 24px;
+
+}
+
+.nav-items > ul > li {
+    padding: 10px;
+    margin: 10px;
+}
+
+.res-container {
+    display: flex;
+    flex-wrap: wrap;
+    
+}
+
+.res-card {
+    padding: 5px;
+    margin: 5px;
+    margin: 5px;
+    width: 250px;
+    background-color: rgb(216, 210, 210);
+}
+
+.res-card:hover {
+    cursor: pointer;
+    border: 1px solid black;
+}
+
+.res-logo {
+    width: 100%;
+    height: 200px;
+}
+
+.search {
+    padding: 20px;
+}
+
+button {
+    margin: 20px;
+    cursor: pointer;
+}
+.filter-btn {
+    margin: 10px;
+    cursor : pointer
+}
+
+.shimmer-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+.shimmer-card{
+    padding: 5px;
+    margin: 5px;
+    margin: 5px;
+    width: 250px;
+    background-color: rgb(216, 210, 210);
+
 }
