--- a/index.css
+++ b/index.css
@@ -33,8 +33,7 @@
 .res-card {
     padding: 5px;
     margin: 5px;
-    margin: 5px;
-    width: 250px;
+    width: 200px;
     background-color: rgb(216, 210, 210);
 }
 
@@ -49,13 +48,13 @@
 }
 
 .search {
-    padding: 20px;
+    padding: 10px;
 }
-
+/* 
 button {
     margin: 20px;
     cursor: pointer;
-}
+} */
 .filter-btn {
     margin: 10px;
     cursor : pointer
@@ -68,8 +67,20 @@ button {
 .shimmer-card{
     padding: 5px;
     margin: 5px;
-    margin: 5px;
-    width: 250px;
-    background-color: rgb(216, 210, 210);
+    width: 200px;
+    height: 400px;
+    background-color: #f0f0f0;
 
+}
+
+.login {
+    background-color: rgb(228, 120, 26);
+    height: 50px;
+    width: 85px;
+    font-size: 24px;
+    color: white;
+}
+
+.filter {
+    display: flex;
 }
